--- a/GMap_IE10/WebContent/index.html
+++ b/GMap_IE10/WebContent/index.html
@@ -9,6 +9,9 @@
 	src="http://maps.googleapis.com/maps/api/js?key=AIzaSyASV3jYSMXZwrMoh2FU4bKesvYGJt1q2ho&sensor=false">
 	
 </script>
+
+<script type="text/javascript" src="./js/main.js"></script>
+
 <style type="text/css">
 html, body {
 	height: 100%;
@@ -17,11 +20,9 @@ html, body {
 }
 </style>
 
-<script type="text/javascript" src="./js/main.js"></script>
-
 </head>
 
-<body onload="IE10.initialize()">
+<body onload="ie10.main()">
 	<div id="map_canvas"></div>
 </body>
 </html>
